@@ -35,7 +35,6 @@ if prefer :apps4, 'learn-rails'
   add_gem 'gibbon'
   gsub_file 'Gemfile', /gem 'sqlite3'\n/, ''
   add_gem 'sqlite3', :group => :development
-  add_gem 'rails_12factor', :group => :production
 
   stage_three do
     say_wizard "recipe stage three"
@@ -72,7 +71,11 @@ if prefer :apps4, 'learn-rails'
 
     # >-------------------------------[ Assets ]--------------------------------<
 
-    copy_from_repo 'app/assets/javascripts/segmentio.js', :repo => repo
+    copy_from_repo 'app/assets/javascripts/segment.js', :repo => repo
+
+    # >-------------------------------[ Tests ]--------------------------------<
+
+    copy_from_repo 'test/test_helper.rb', :repo => repo
 
   end
 end
